--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -100,19 +100,10 @@ window:
 
 # Font configuration
 font:
-  size: 14
-  # Normal (roman) font face
   normal:
     # Font family
-    #
-    # Default:
-    #   - (macOS) Menlo
-    #   - (Linux/BSD) monospace
-    #   - (Windows) Consolas
-    family: agave NF 
-
-    # The `style` can be specified to pick a specific face.
-    #style: Regular
+    family: agave Nerd Font
+    style: Regular
 
   # Bold font face
   #bold:
@@ -148,7 +139,7 @@ font:
     #style: Bold Italic
 
   # Point size
-  #size: 11.0
+  size: 14.0
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
