--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -101,45 +101,27 @@ window:
 # Font configuration
 font:
   normal:
-    # Font family
-    family: agave Nerd Font
+    # family: agave Nerd Font
+    family: FiraCode Nerd Font
     style: Regular
 
   # Bold font face
   #bold:
-    # Font family
-    #
-    # If the bold family is not specified, it will fall back to the
-    # value specified for the normal font.
-    #family: monospace
-
-    # The `style` can be specified to pick a specific face.
-    #style: Bold
+    family: FiraCode Nerd Font
+    style: Bold
 
   # Italic font face
   #italic:
-    # Font family
-    #
-    # If the italic family is not specified, it will fall back to the
-    # value specified for the normal font.
-    #family: monospace
-
-    # The `style` can be specified to pick a specific face.
-    #style: Italic
+    family: FiraCode Nerd Font 
+    style: Italic
 
   # Bold italic font face
   #bold_italic:
-    # Font family
-    #
-    # If the bold italic family is not specified, it will fall back to the
-    # value specified for the normal font.
     #family: monospace
-
-    # The `style` can be specified to pick a specific face.
     #style: Bold Italic
 
   # Point size
-  size: 14.0
+  size: 12.0
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
@@ -163,112 +145,104 @@ font:
 # If `true`, bold text is drawn using the bright color variants.
 #draw_bold_text_with_bright_colors: false
 
+
+# Base16 Tomorrow - alacritty color config
+# Chris Kempson (http://chriskempson.com)
+# colors:
+  # Default colors
+  #   primary:
+  #     background: '0xffffff'
+  #     foreground: '0x4d4d4c'
+
+  # Colors the cursor will use if `custom_cursor_colors` is true
+  #   cursor:
+  #     text: '0xffffff'
+  #     cursor: '0x4d4d4c'
+
+  # Normal colors
+  #   normal:
+  #   black:   '0xfffff
+  #   red:     '0xc8282
+  #   green:   '0x718c0
+  #   yellow:  '0xeab70
+  #   blue:    '0x4271a
+  #   magenta: '0x8959a
+  #   cyan:    '0x3e999
+  #   white:   '0x4d4d4c'
+
+  # Bright colo
+  # brigh
+  # black:   '0x8e908
+  # red:     '0xf5871
+  # green:   '0xe0e0e
+  # yellow:  '0xd6d6d
+  # blue:    '0x96989
+  # magenta: '0x282a2
+  # cyan:    '0xa3685
+  # white:   '0x1d1f2
+  # draw_bold_text_with_bright_colors: false
+
+
+# Colors (Gruvbox light)
+#colors:
+#  # Default colors
+#  primary:
+#    # hard contrast: background = '#f9f5d7'
+#    background: '#fbf1c7'
+#    # soft contrast: background = '#f2e5bc'
+#    foreground: '#3c3836'
+#
+#  # Normal colors
+#  normal:
+#    black:   '#fbf1c7'
+#    red:     '#cc241d'
+#    green:   '#98971a'
+#    yellow:  '#d79921'
+#    blue:    '#458588'
+#    magenta: '#b16286'
+#    cyan:    '#689d6a'
+#    white:   '#7c6f64'
+#
+#  # Bright colors
+#  bright:
+#    black:   '#928374'
+#    red:     '#9d0006'
+#    green:   '#79740e'
+#    yellow:  '#b57614'
+#    blue:    '#076678'
+#    magenta: '#8f3f71'
+#    cyan:    '#427b58'
+#    white:   '#3c3836'
+# Colors (Gruvbox dark)
 colors:
   # Default colors
   primary:
-    #background: '#000000'
-    #foreground: '#ffffff'
-    background: '#ffffff'
-    foreground: '#000000'
-
-    # Bright and dim foreground colors
-    #
-    # The dimmed foreground color is calculated automatically if it is not present.
-    # If the bright foreground color is not set, or `draw_bold_text_with_bright_colors`
-    # is `false`, the normal foreground color will be used.
-    #dim_foreground: '#828482'
-    #bright_foreground: '#eaeaea'
-
-  # Cursor colors
-  #
-  # Colors which should be used to draw the terminal cursor.
-  #
-  # Allowed values are CellForeground and CellBackground, which reference the
-  # affected cell, or hexadecimal colors like #ff00ff.
-  #cursor:
-  #  text: CellBackground
-  #  cursor: CellForeground
-
-  # Vi mode cursor colors
-  #
-  # Colors for the cursor when the vi mode is active.
-  #
-  # Allowed values are CellForeground and CellBackground, which reference the
-  # affected cell, or hexadecimal colors like #ff00ff.
-  #vi_mode_cursor:
-  #  text: CellBackground
-  #  cursor: CellForeground
-
-  # Selection colors
-  #
-  # Colors which should be used to draw the selection area.
-  #
-  # Allowed values are CellForeground and CellBackground, which reference the
-  # affected cell, or hexadecimal colors like #ff00ff.
-  #selection:
-  #  text: CellBackground
-  #  background: CellForeground
-
-  # Search colors
-  #
-  # Colors used for the search bar and match highlighting.
-  #search:
-    # Allowed values are CellForeground and CellBackground, which reference the
-    # affected cell, or hexadecimal colors like #ff00ff.
-    #matches:
-    #  foreground: '#000000'
-    #  background: '#ffffff'
-
-    #bar:
-    #  background: '#c5c8c6'
-    #  foreground: '#1d1f21'
+    hard contrast: background = '#1d2021'
+    # background: '#282828'
+    # soft contrast: background = '#32302f'
+    foreground: '#ebdbb2'
 
   # Normal colors
-  #normal:
-  #  black:   '#1d1f21'
-  #  red:     '#cc6666'
-  #  green:   '#b5bd68'
-  #  yellow:  '#f0c674'
-  #  blue:    '#81a2be'
-  #  magenta: '#b294bb'
-  #  cyan:    '#8abeb7'
-  #  white:   '#c5c8c6'
+  normal:
+    black:   '#282828'
+    red:     '#cc241d'
+    green:   '#98971a'
+    yellow:  '#d79921'
+    blue:    '#458588'
+    magenta: '#b16286'
+    cyan:    '#689d6a'
+    white:   '#a89984'
 
   # Bright colors
-  #bright:
-  #  black:   '#666666'
-  #  red:     '#d54e53'
-  #  green:   '#b9ca4a'
-  #  yellow:  '#e7c547'
-  #  blue:    '#7aa6da'
-  #  magenta: '#c397d8'
-  #  cyan:    '#70c0b1'
-  #  white:   '#eaeaea'
-
-  # Dim colors
-  #
-  # If the dim colors are not set, they will be calculated automatically based
-  # on the `normal` colors.
-  #dim:
-  #  black:   '#131415'
-  #  red:     '#864343'
-  #  green:   '#777c44'
-  #  yellow:  '#9e824c'
-  #  blue:    '#556a7d'
-  #  magenta: '#75617b'
-  #  cyan:    '#5b7d78'
-  #  white:   '#828482'
-
-  # Indexed Colors
-  #
-  # The indexed colors include all colors from 16 to 256.
-  # When these are not set, they're filled with sensible defaults.
-  #
-  # Example:
-  #   `- { index: 16, color: '#ff00ff' }`
-  #
-  #indexed_colors: []
-
+  bright:
+    black:   '#928374'
+    red:     '#fb4934'
+    green:   '#b8bb26'
+    yellow:  '#fabd2f'
+    blue:    '#83a598'
+    magenta: '#d3869b'
+    cyan:    '#8ec07c'
+    white:   '#ebdbb2'
 # Bell
 #
 # The bell is rung every time the BEL control character is received.
