--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -7,8 +7,8 @@
 # (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow, 
 # unless explicitly requested using the wintypes option.
 #
-# shadow = false
-shadow = true;
+shadow = false;
+# shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 shadow-radius = 12; 
@@ -63,6 +63,7 @@ shadow-radius = 12;
 # shadow-exclude = []
 shadow-exclude = [
   "name = 'Notification'",
+  "name *= 'Chromium'",
   "class_g = 'Conky'",
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
@@ -115,20 +116,25 @@ fade-out-step = 0.03;
 #   Transparency / Opacity      #
 #################################
 
+inactive-opacity = 0.9;
+active-opacity = 1;
+frame-opacity = 0.6;
+inactive-opacity-override = false;
+
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
-inactive-opacity = 1;
+# inactive-opacity = 1;
 # inactive-opacity = 0.8;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
-frame-opacity = 1.0;
+#frame-opacity = 1.0;
 # frame-opacity = 0.7;
 
 # Default opacity for dropdown menus and popup menus. (0.0 - 1.0, defaults to 1.0)
 # menu-opacity = 1.0
 
 # Let inactive opacity set by -i override the '_NET_WM_OPACITY' values of windows.
-inactive-opacity-override = true
+#inactive-opacity-override = true
 #inactive-opacity-override = false;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
@@ -161,7 +167,8 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 
 # Parameters for background blurring, see the *BLUR* section for more information.
 blur-method = "dual_kawase"; 
-blur-size = 12
+blur-size = 12;
+blur-strength = 15;
 #
 # blur-deviation = false
 
@@ -213,8 +220,8 @@ backend = "glx";
 # backend = "xrender";
 
 # Enable/disable VSync.
-vsync = false;
-# vsync = true
+# vsync = false;
+vsync = true
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
 # dbus = false
