--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -7,8 +7,8 @@
 # (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow, 
 # unless explicitly requested using the wintypes option.
 #
-shadow = false;
-# shadow = true;
+# shadow = false;
+shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 shadow-radius = 12; 
@@ -155,7 +155,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # Note we don't make any guarantee about possible conflicts with other 
 # programs that set '_NET_WM_WINDOW_OPACITY' on frame or client windows.
 # example:
-#    opacity-rule = [ "80:class_g = 'URxvt'" ];
+opacity-rule = [ "100:class_g = 'Chromium'" ];
 #
 # opacity-rule = []
 
@@ -168,7 +168,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # Parameters for background blurring, see the *BLUR* section for more information.
 blur-method = "dual_kawase"; 
 blur-size = 12;
-blur-strength = 15;
+blur-strength = 3;
 #
 # blur-deviation = false
 
