--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -11,7 +11,7 @@
 shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
-shadow-radius = 12; 
+shadow-radius = 10; 
 # shadow-radius = 7;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
@@ -116,9 +116,8 @@ fade-out-step = 0.03;
 #   Transparency / Opacity      #
 #################################
 
-inactive-opacity = 0.9;
+inactive-opacity = 1;
 active-opacity = 1;
-frame-opacity = 0.6;
 inactive-opacity-override = false;
 
 
@@ -127,7 +126,7 @@ inactive-opacity-override = false;
 # inactive-opacity = 0.8;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
-#frame-opacity = 1.0;
+frame-opacity = 1.0;
 # frame-opacity = 0.7;
 
 # Default opacity for dropdown menus and popup menus. (0.0 - 1.0, defaults to 1.0)
@@ -155,7 +154,10 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # Note we don't make any guarantee about possible conflicts with other 
 # programs that set '_NET_WM_WINDOW_OPACITY' on frame or client windows.
 # example:
-opacity-rule = [ "100:class_g = 'Chromium'" ];
+opacity-rule = [
+"100:class_g = 'Chromium'",
+"100:class_g = 'discord'",
+];
 #
 # opacity-rule = []
 
@@ -168,7 +170,7 @@ opacity-rule = [ "100:class_g = 'Chromium'" ];
 # Parameters for background blurring, see the *BLUR* section for more information.
 blur-method = "dual_kawase"; 
 blur-size = 12;
-blur-strength = 3;
+blur-strength = 6;
 #
 # blur-deviation = false
 
