--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -11,11 +11,11 @@
 shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
-shadow-radius = 10; 
+shadow-radius = 12; 
 # shadow-radius = 7;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-# shadow-opacity = .75
+shadow-opacity = 0.9;
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-x = -15;
@@ -63,7 +63,6 @@ shadow-radius = 10;
 # shadow-exclude = []
 shadow-exclude = [
   "name = 'Notification'",
-  "name *= 'Chromium'",
   "class_g = 'Conky'",
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
@@ -116,17 +115,13 @@ fade-out-step = 0.03;
 #   Transparency / Opacity      #
 #################################
 
-inactive-opacity = 1;
-active-opacity = 1;
-inactive-opacity-override = false;
-
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1;
 # inactive-opacity = 0.8;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
-frame-opacity = 1.0;
+# frame-opacity = 1.0;
 # frame-opacity = 0.7;
 
 # Default opacity for dropdown menus and popup menus. (0.0 - 1.0, defaults to 1.0)
