--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -38,9 +38,9 @@ window:
 # Font configuration
 font:
   normal:
-    # family: agave Nerd Font
+    family: agave Nerd Font
     # family: FiraCode Nerd Font 
-    family: UbuntuMono Nerd Font
+    #family: UbuntuMono Nerd Font
     style: Regular
 
   # Bold font face
